--- a/cycle_dynamics.html
+++ b/cycle_dynamics.html
@@ -191,7 +191,7 @@
             <!-- <video playsinline="" autoplay="" loop="" preload="" muted="" width="100%">
               <source src="https://www.youtube.com/embed/z4R0OBZPhXA" type="video/mp4">
              </video> -->
-             <iframe width="900" height="500" src="https://www.youtube.com/embed/CZAsUM96oVg" 
+             <iframe width="900" height="500" src="https://www.youtube.com/embed/xuETR7WqF4c" 
              frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
              gyroscope; picture-in-picture" allowfullscreen>
             </iframe>          
