--- a/cycle_dynamics.html
+++ b/cycle_dynamics.html
@@ -186,6 +186,26 @@
       </tr> -->
       <tr>
         <td>
+          <center><h2>Short Description Video:</h2></center>
+          <table align=center width=300px>
+          <tr><td align=center width=300px>
+            <!-- <video playsinline="" autoplay="" loop="" preload="" muted="" width="100%">
+              <source src="https://www.youtube.com/embed/z4R0OBZPhXA" type="video/mp4">
+             </video> -->
+             <iframe width="900" height="500" src="https://www.youtube.com/embed/CZAsUM96oVg" 
+             frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+             gyroscope; picture-in-picture" allowfullscreen>
+            </iframe>          
+          </table>
+        </td>
+      </tr>
+
+      <tr>
+        <td>
+          <br>
+          <br>
+          <br>
+          <center><h2>ICLR Talk Video:</h2></center>
           <table align=center width=300px>
           <tr><td align=center width=300px>
             <!-- <video playsinline="" autoplay="" loop="" preload="" muted="" width="100%">
@@ -198,6 +218,7 @@
           </table>
         </td>
       </tr>
+
     </table>
     <br>
     <!-- <hr> -->
