--- a/index.html
+++ b/index.html
@@ -341,8 +341,11 @@
             <heading>Awards</heading>
             <p>
               <ul>
+                <li>2021: Bachelor Honor Degree Award(Summa Cum Laude), Shanghai Jiao Tong University.</li>
+                <li>2021: Shanghai Outstanding Undergraduate, Shanghai Municipal Commission of Education.</li>
+                <li>2021: Outstanding Undergraduate Thesis(Top 1%), Shanghai Jiao Tong University.</li>
                 <li>2019: SJTU Encouragement People Prize(10 per year in SJTU), Shanghai Jiao Tong Univeristy</li>
-                <li>2018: RoboCup China Competition:<font color="red"><strong>National Championship</strong></font>, also Selected as the only representative from ~2700 competitors. Chinese Association of Automation.</li>
+                <li>2018: RoboCup China Competition:National Championship, also Selected as the only representative from ~2700 competitors. Chinese Association of Automation.</li>
                 <li>2018: Mathematical Contest in Modeling(USA): Meritorious Winner. </li>
                 <li>2017: China Undergraduate Mathematical Contest in Modeling, Shanghai Division: First Prize</li>
                 <li>2017: China Undergraduate Physical Contest, Shanghai Division: Second Prize</li>
@@ -363,7 +366,7 @@
               <li>2018,2019: Tanglixin Scholarship (Top 60 from ~42000 in SJTU), Shanghai Jiao Tong University. </li>
               <li>2018,2019: SJTU A-class Academic Excellence Scholarship (Top 1%), Shanghai Jiao Tong University. </li>
               <li>2017,2018,2019: Zhiyuan Honor Scholarship(Top 5%), Shanghai Jiao Tong University.</li> 
-              <li>2018: <font color="red"><strong>National Scholarship</strong></font> (Top 0.2% in China), Ministry of Education of P.R.China. </li> 
+              <li>2018: National Scholarship (Top 0.2% in China), Ministry of Education of P.R.China. </li> 
               <li>2017: National Scholarship for Encouragement, Ministry of Education of P.R.China. </li> 
               </ul>
           </p>
@@ -423,4 +426,3 @@
   </table>
   </body>
 </html>
-
