--- a/index.html
+++ b/index.html
@@ -411,16 +411,12 @@
         </td>
       </tr>
       </table>
-      <script type="text/javascript">
-      var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-          document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 
-      </script> <script type="text/javascript">
-      try {
-          var pageTracker = _gat._getTracker("UA-7580334-1");
-          pageTracker._trackPageview();
-          } catch(err) {}
-      </script>
+      <script type="text/javascript" id="clustrmaps" 
+      src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=b9qzrkuRsnqF9u7-lSZ3NxZ6AL7Q9Pj5t3SD5E2mObI"></script>
+      
+
+
     </td>
     </tr>
   </table>
