--- a/index.html
+++ b/index.html
@@ -397,24 +397,19 @@
           <img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=70&t=n&d=b9qzrkuRsnqF9u7-lSZ3NxZ6AL7Q9Pj5t3SD5E2mObI&co=ffffff&ct=ffffff" /></a>
         </p> -->
 
-        <p align="right"></p>
-        <a href="http://people.csail.mit.edu/qiangz/" title="Visit tracker">
-          <img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=70&t=n&d=s1fim3iKs_cR_0NwPso2ZQ8sdKxvnKWL-ooWm_cKoEo&co=ffffff" /></a>
-        </p>
+        <a href="https://clustrmaps.com/site/1almx" title="Visit tracker">
+          <img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=n&d=b9qzrkuRsnqF9u7-lSZ3NxZ6AL7Q9Pj5t3SD5E2mObI" /></a>
 
         <p align="right">
           <font size="2">
           Webpage template borrowed from <a href="https://jonbarron.info">Jon Barron</a> website. <br>
-          Last updated Dec. 2020. <a href="https://accessibility.mit.edu/">Accessibility</a>
+          Last updated Sep. 2021.
 	    </font>
         </p>
         </td>
       </tr>
       </table>
 
-      <script type="text/javascript" id="clustrmaps" 
-      src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=b9qzrkuRsnqF9u7-lSZ3NxZ6AL7Q9Pj5t3SD5E2mObI"></script>
-      
 
 
     </td>
