--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <heading>Research</heading>
           <p>
             <p>
-              I'm interested in computer vision, computational imaging and machine learning.
+              I'm interested in computer vision, robotics and machine learning.
             </p>
           </p>
         </td>
