--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <p align="center">
           <name>Qiang Zhang</name>
         </p>
-        <p>I am a PhD student at Department of Computer Science in <a href="https://www.princeton.edu/">Princeton University</a>. Previously, I graduated from <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a> in 2021 with Summa Cum Laude.</a>
+        <p>I am a PhD student at Department of Computer Science in <a href="https://www.princeton.edu/">Princeton University</a>, fortunately advised by <a href="https://www.cs.princeton.edu/~smr/">Prof. Szymon Rusinkiewicz</a>. Previously, I graduated from <a href="https://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a> in 2021 with Summa Cum Laude.</a>
         </p>
 
         <p> 
