--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p align=center>
           <a href="mailto:qz9238@princeton.edu">Email</a> &nbsp/&nbsp
           <a href="https://www.linkedin.com/in/qiang-zhang-6b48791a7/">Linkedin</a>&nbsp/&nbsp
-          <a href="resources/QiangZhang_CV.pdf">CV</a> &nbsp/&nbsp
+          <a href="resources/QiangZhang_Resume.pdf">CV</a> &nbsp/&nbsp
           <a href="https://github.com/sjtuzq">Github</a> &nbsp/&nbsp
           <a href="https://scholar.google.com/citations?user=mapNJjcAAAAJ&hl=en">Google Scholar</a>
         </p>
